# desafio-ab-test

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
reports/: acompanhamento.csv  parceiro_a.html  parceiro_a.md  parceiro_b.html  parceiro_b.md  parceiro_c.html  parceiro_c.md
src/cashback_ab/: cli.py  data_io.py  decision.py  formatting.py  metrics.py  report.py  sheets.py  sheets_google.py  stats.py
templates/: report.md.j2
tests/: test_decision.py  test_io.py  test_metrics.py
