[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cashback-ab-analyzer"
version = "0.1.0"
description = "Analisa testes A/B de cashback e recomenda qual variante escalar para 100% do tráfego."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aline Lima", email = "aline.souza21@outlook.com.br" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "scipy>=1.10",
    "jinja2>=3.1",
    "markdown>=3.5",
    "gspread>=6.0",
    "google-auth>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8"]

# Transforma o pipeline num comando de terminal: `analyze <csv>`
[project.scripts]
analyze = "cashback_ab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]